# Azure-Kinect-Sensor-SDK

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile.in  README.md  StubGenerator.json.in  StubGenerator.xml.in  VersionInfo.cs.in  azure-pipelines.yml  branches.js  cgmanifest.json  index.html  k4a.props.in  kinect-qa.md  microsoft-support.md  version.rc.in  version.txt
examples/: CMakeLists.txt  Examples.sln
examples/calibration/: CMakeLists.txt  main.cpp  readme.md
examples/calibration_registration/: .gitignore  .pylintrc  Pipfile  README.md  calibrate.py  camera_tools.py  register.py
examples/depth_eval_tools/: CMakeLists.txt  README.md
examples/enumerate/: CMakeLists.txt  enumerate.vcxproj  main.c  readme.md
examples/external_sync_playback/: CMakeLists.txt  main.c  readme.md
examples/fastpointcloud/: CMakeLists.txt  README.md  fastpointcloud.vcxproj  main.cpp
examples/green_screen/: CMakeLists.txt  MultiDeviceCapturer.h  README.md  green_screen.vcxproj  green_screen.vcxproj.filters  main.cpp  packages.config  transformation.h
examples/greenscreen/: CMakeLists.txt  MultiDeviceCapturer.h  Program.cs  main.cpp
examples/k4afastcapture_streaming/: CMakeLists.txt  README.md  k4afastcapture.cpp  k4afastcapture.h  k4afastcapture_streaming.vcxproj  main.cpp
examples/k4afastcapture_trigger/: CMakeLists.txt  README.md  trigger.cpp
examples/k4arecord_custom_track/: CMakeLists.txt  README.md  main.c
examples/k4arecorder/: CMakeLists.txt  README.md  cmdparser.h  k4arecorder.vcxproj  main.cpp  recorder.cpp  recorder.h
examples/k4arecorder_custom_track/: CMakeLists.txt  main.cpp
examples/k4aviewer/: CMakeLists.txt  README.md  assertionexception.h  filesystem17.h  ik4adockcontrol.h  ik4aframevisualizer.h  ik4aobserver.h  ik4avisualizationwindow.h  k4aaudiochanneldatagraph.cpp  k4aaudiochanneldatagraph.h  k4aaudiomanager.cpp  k4aaudiomanager.h  k4aaudiowindow.cpp  k4aaudiowindow.h  k4acalibrationtransformdata.cpp  k4acalibrationtransformdata.h  k4acapture.cpp  k4acapture.h  k4acolorframevisualizer.cpp  k4acolorframevisualizer.h  k4aconvertingframesource.h  k4adatasource.h  k4adepthframevisualizer.cpp  k4adepthframevisualizer.h  k4adepthpixelcolorizer.h  k4adepthsensorframebasevisualizer.h  k4adevice.cpp  k4adevice.h  k4adevicecorrelator.h  k4adevicedockcontrol.cpp  k4adevicedockcontrol.h  k4adeviceselectioncontrol.cpp  k4adeviceselectioncontrol.h  k4adevicesettingscontrol.cpp  k4adevicesettingscontrol.h  k4afilepicker.cpp  k4afilepicker.h  k4aframeratetracker.h  k4aimage.h  k4aimageextractor.h  (+58 more)
examples/kinfu/: CMakeLists.txt  README.md  kinfu_example.vcxproj  main.cpp
examples/opencv_compatibility/: CMakeLists.txt  README.md  main.cpp  opencv_compatibility.vcxproj
examples/playback_external_sync/: CMakeLists.txt  main.c  readme.md
examples/simpleviewer/: CMakeLists.txt
examples/snipits/: CMakeLists.txt  main.c  readme.md
examples/streaming/: CMakeLists.txt  main.c  readme.md  streaming.vcxproj
examples/transformation/: CMakeLists.txt  README.md  main.cpp  transformation.vcxproj  transformation_helpers.cpp  transformation_helpers.h
examples/undistort/: CMakeLists.txt  README.md  main.cpp  undistort.vcxproj
examples/viewer/: CMakeLists.txt
src/: CMakeLists.txt
src/allocator/: CMakeLists.txt  allocator.c
src/calibration/: CMakeLists.txt  calibration.c
src/capturesync/: CMakeLists.txt  capturesync.c
src/color/: CMakeLists.txt  color.cpp  color_priv.h  ksmetadata.h  mfcamerareader.cpp  mfcamerareader.h  uvc_camerareader.cpp  uvc_camerareader.h
src/color_mcu/: CMakeLists.txt  color_mcu.c  colorcommands.h
src/csharp/: .editorconfig  .gitignore  AzureKinectSensorSDK.editorconfig  AzureKinectSensorSDK.ruleset  K4a.sln  Microsoft.Azure.Kinect.Sensor.snk  StubGenerator.x86.xml  VersionInfo.cs  k4a.props  k4a.x86.props  stylecop.json
src/deloader/: CMakeLists.txt  deloader.c  deloader.cpp
src/depth/: CMakeLists.txt  depth.c
src/depth_mcu/: CMakeLists.txt  depth_mcu.c  depthcommands.h
src/dewrapper/: CMakeLists.txt  dewrapper.c
src/dynlib/: CMakeLists.txt  dynlib_linux.c  dynlib_windows.c
src/firmware/: CMakeLists.txt  firmware.c
src/global/: CMakeLists.txt  global.c
src/image/: CMakeLists.txt  image.c
src/imu/: CMakeLists.txt  imu.c
src/logging/: CMakeLists.txt  logging.cpp
src/math/: CMakeLists.txt  math.c
src/modes/: CMakeLists.txt  modes.c
src/queue/: CMakeLists.txt  queue.c
src/record/: CMakeLists.txt
src/rwlock/: CMakeLists.txt  rwlock_linux.c  rwlock_win32.c
src/sdk/: CMakeLists.txt  dll_main.c  k4a.c
src/tewrapper/: CMakeLists.txt  tewrapper.c
src/transformation/: CMakeLists.txt  extrinsic_transformation.c  intrinsic_transformation.c  mode_specific_calibration.c  rgbz.c  transformation.c
src/usbcommand/: CMakeLists.txt  usb_cmd_priv.h  usbcommand.c  usbstreaming.c
tests/: CMakeLists.txt
tests/Calibration/: CMakeLists.txt  calibration.cpp
tests/CaptureSync/: CMakeLists.txt  capturesync.cpp
tests/ColorTests/: CMakeLists.txt
tests/DepthTests/: CMakeLists.txt
tests/ExternLibraries/: CMakeLists.txt
tests/FirmwareTests/: CMakeLists.txt  firmware_fw.cpp  firmware_helper.cpp  firmware_helper.h  firmware_interrupt_fw.cpp
tests/IMUTests/: CMakeLists.txt
tests/TestUtil/: CMakeLists.txt  Capture.cpp  Capture.h  Cli.h  CliEng.c  Example.c  Example.h  Main.cpp  Main.h  UsbCmd.c  UsbCmd.h  k4aCmd.c  k4aCmd.h
tests/Transformation/: CMakeLists.txt  transformation.cpp
tests/UnitTests/: CMakeLists.txt
tests/Utilities/: CMakeLists.txt
tests/example/: CMakeLists.txt  test.cpp
tests/examples/: CMakeLists.txt  examples_ft.cpp
tests/executables/: CMakeLists.txt  executables_ft.cpp
tests/global/: CMakeLists.txt  global.cpp
tests/latency/: CMakeLists.txt  latency_perf.cpp
tests/logging/: CMakeLists.txt  logging_ut.cpp
tests/multidevice/: CMakeLists.txt  multidevice.cpp
tests/projections/: CMakeLists.txt
tests/rwlock/: CMakeLists.txt  rwlock.cpp
tests/sample/: CMakeLists.txt  test.cpp
(+15505 files in other folders)
